<resources>
    <string name="app_name">Jokempo</string>
    <string name="app_nam">Jokempô</string>
    <string name="text_jogada">Escolha sua jogada:</string>
    <string name="text_vc">Você</string>
    <string name="text_ia">IA</string>
    <string name="resultado">Resultado</string>
    <string name="x">X</string>
    <string name="ganhou">Ganhou</string>
    <string name="perdeu">Perdeu</string>
    <string name="empate">Empate</string>
</resources>